[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-providers"
version = "0.1.0"
description = "Lightweight Protocol-based abstraction for LLM providers (Claude / Gemini / OpenAI). Streaming chat with tool-use translation + sync single-shot completion."
readme = "README.md"
license = "MIT"
authors = [{name = "Addo-Kwabena Addo", email = "akaddo97@gmail.com"}]
requires-python = ">=3.11"
keywords = ["llm", "anthropic", "openai", "gemini", "streaming", "tool-use", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/akaddo97/llm-providers"
Issues = "https://github.com/akaddo97/llm-providers/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_providers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
